@@ -1204,33 +1204,24 @@ static int QRinput_insertFNC1Header(QRinput *input)
  * @return merged bit stream
  */
 
-__STATIC BitStream *QRinput_mergeBitStream(QRinput *input)
+__STATIC int QRinput_mergeBitStream(QRinput *input, BitStream *bstream)
 {
-	BitStream *bstream;
-
-	bstream = BitStream_new();
-	if(bstream == NULL) return NULL;
-
 	if(input->mqr) {
 		if(QRinput_createBitStream(input, bstream) < 0) {
-			goto ABORT;
+			return -1;
 		}
 	} else {
 		if(input->fnc1) {
 			if(QRinput_insertFNC1Header(input) < 0) {
-				return NULL;
+				return -1;
 			}
 		}
 		if(QRinput_convertData(input, bstream) < 0) {
-			goto ABORT;
+			return -1;
 		}
 	}
 
-	return bstream;
-
-ABORT:
-	BitStream_free(bstream);
-	return NULL;
+	return 0;
 }
 
 /**
@@ -1239,26 +1230,21 @@ ABORT:
  * @return padded merged bit stream
  */
 
-__STATIC BitStream *QRinput_getBitStream(QRinput *input)
+__STATIC int QRinput_getBitStream(QRinput *input, BitStream *bstream)
 {
-	BitStream *bstream;
 	int ret;
 
-	bstream = QRinput_mergeBitStream(input);
-	if(bstream == NULL) {
-		return NULL;
-	}
+	ret = QRinput_mergeBitStream(input, bstream);
+	if(ret < 0) return -1;
+
 	if(input->mqr) {
 		ret = QRinput_appendPaddingBitMQR(bstream, input);
 	} else {
 		ret = QRinput_appendPaddingBit(bstream, input);
 	}
-	if(ret < 0) {
-		BitStream_free(bstream);
-		return NULL;
-	}
+	if(ret < 0) return -1;
 
-	return bstream;
+	return 0;
 }
 
 /**
@@ -1271,9 +1257,16 @@ unsigned char *QRinput_getByteStream(QRinput *input)
 {
 	BitStream *bstream;
 	unsigned char *array;
+	int ret;
 
-	bstream = QRinput_getBitStream(input);
+	bstream = BitStream_new();
 	if(bstream == NULL) {
+		return NULL;
+	}
+
+	ret = QRinput_getBitStream(input, bstream);
+	if(ret < 0) {
+		BitStream_free(bstream);
 		return NULL;
 	}
 	array = BitStream_toByte(bstream);
