@@ -112,8 +112,8 @@ extern const signed char QRinput_anTable[128];
 #define MAX_STRUCTURED_SYMBOLS 16
 
 #ifdef WITH_TESTS
-extern BitStream *QRinput_mergeBitStream(QRinput *input);
-extern BitStream *QRinput_getBitStream(QRinput *input);
+extern int QRinput_mergeBitStream(QRinput *input, BitStream *bstream);
+extern int QRinput_getBitStream(QRinput *input, BitStream *bstream);
 extern int QRinput_estimateBitStreamSize(QRinput *input, int version);
 extern int QRinput_splitEntry(QRinput_List *entry, int bytes);
 extern int QRinput_lengthOfCode(QRencodeMode mode, int version, int bits);
